Fix bug with nav panel on mobile screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -270,11 +270,17 @@ nav.header-nav .header-nav__menu li:not(:last-child) {
     width: 100%;
     height: 1px;
 
-    background-color: white;
+    background-color: var(--accent-color);
 
     position: absolute;
     left: 0;
     right: 0;
+}
+
+nav.header-nav:not(.top) .hedaer-nav__burger::after,
+nav.header-nav:not(.top) .hedaer-nav__burger::before,
+nav.header-nav:not(.top) .hedaer-nav__burger span {
+    background-color: white;
 }
 
 .hedaer-nav__burger::before {
@@ -318,14 +324,18 @@ nav.header-nav .header-nav__menu li:not(:last-child) {
         flex-direction: column;
         justify-content: center;
 
-        background-color: var(--accent-color);
-
         padding: 30px 0;
+
+        background-color: white;
 
         opacity: 0;
         display: none;
 
         transition: all .25s ease;
+    }
+
+    nav.header-nav:not(.top) .header-nav__menu {
+        background-color: var(--accent-color);
     }
 
     nav.header-nav .header-nav__menu.shown {
